--- a/requirements.txt
+++ b/requirements.txt
@@ -24,8 +24,7 @@ matplotlib>=3.7.0
 seaborn>=0.12.0
 plotly>=5.15.0
 
-# Database
-sqlite3
+# Database (sqlite3 is built into Python, no separate install needed)
 
 # Configuration and utilities
 python-dotenv>=1.0.0
